Add pages to side bar menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,17 +39,21 @@
           <li class="sub-menu">
             <strong><i class="fa fa-university"></i> <span>Public Safety Departments</span></strong>
             <ul>
-              <li><a href="{{ site.baseurl }}/charts/apd.html">Atlanta Police Department</a></li>
-              <li><a href="{{ site.baseurl }}/charts/afr.html">Atlanta Fire Rescue Department</a></li>
-              <li><a href="{{ site.baseurl }}/charts/doc.html">Department of Corrections</a></li>
+              <li><a href="{{ site.baseurl }}/charts/atlanta-police-department.html">Atlanta Police Department</a></li>
+              <li><a href="{{ site.baseurl }}/charts/atlanta-fire-rescue.html">Atlanta Fire Rescue Department</a></li>
+              <li><a href="{{ site.baseurl }}/charts/department-of-corrections.html">Department of Corrections</a></li>
               <li><a href="{{ site.baseurl }}/charts/court.html">Atlanta Municipal Court</a></li>
             </ul>
           </li>
           <li class="sub-menu">
-            <strong><i class="fa fa-cogs"></i> <span>Efficiency and Service</span></strong>
+            <strong><i class="fa fa-cogs"></i> <span>Operational Departments</span></strong>
             <ul>
-              <li><a href="{{ site.baseurl }}/charts/customer-satisfaction.html">Customer Satisfaction</a></li>
-              <li><a href="{{ site.baseurl }}/charts/core-customer-services.html">Core Customer Services</a></li>
+              <li><a href="{{ site.baseurl }}/charts/watershed-management.html">Department of Watershed Management</a></li>
+              <li><a href="{{ site.baseurl }}/charts/public-works.html">Department of Public Works</a></li>
+              <li><a href="{{ site.baseurl }}/charts/parks-and-rec.html">Department of Parks and Recreation</a></li>
+              <li><a href="{{ site.baseurl }}/charts/office-of-buildings.html">Office of Buildings</a></li>
+              <li><a href="{{ site.baseurl }}/charts/code-enforcement.html">Office of Code Enforcement</a></li>
+              <li><a href="{{ site.baseurl }}/charts/aviation.html">Department of Aviation</a></li>
             </ul>
           </li>
         </ul>
