Updated chart pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
               <li><a href="{{ site.baseurl }}/charts/atlanta-police-department.html">Atlanta Police Department</a></li>
               <li><a href="{{ site.baseurl }}/charts/atlanta-fire-rescue.html">Atlanta Fire Rescue Department</a></li>
               <li><a href="{{ site.baseurl }}/charts/department-of-corrections.html">Department of Corrections</a></li>
-              <li><a href="{{ site.baseurl }}/charts/court.html">Atlanta Municipal Court</a></li>
+              <li><a href="{{ site.baseurl }}/charts/municipal-court.html">Atlanta Municipal Court</a></li>
             </ul>
           </li>
           <li class="sub-menu">
