return of the application.js

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
   <script src="/js/highcharts.js"></script>
   <script src="/js/jquery.parse.min.js"></script>
   <script src="/js/lodash.min.js"></script>
+  <script src="/js/application.js"></script>
   <script src="/js/jam.js"></script>
   <script src="/js/charts.js"></script>
 </body>
