increase header <p> size

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -3,6 +3,12 @@
 //////////////////////////
 // Section Headers
 
+.header {
+  p {
+    font-size: 1.2em;
+    line-height: 1.7em;
+  }
+}
 .report-group-body {
 
   .report-group-heading {
