including the ability to click the content and go to chart

--- a/_includes/chart-module.html
+++ b/_includes/chart-module.html
@@ -1,4 +1,4 @@
-<div class="report-chart {{ chart.size }}">
+<div id="{{ chart.datasource }}" class="report-chart {{ chart.size }}">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h5 class="panel-title">{{ chart.title }}</h5>
