--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -11,6 +11,31 @@
     line-height: 1.7em;
   }
 }
+.panel.contents {
+  padding: 10px;
+  @media (min-width: 768px) {
+    max-width: 300px;
+  }
+
+  .contents-title {
+    @media (min-width: 768px) {
+      text-align:center;
+    }
+  }
+
+  ol {
+    margin-top:10px;
+  }
+  &.hasHidden {
+    max-width: 200px;
+    .contents-title {
+      text-align:left;
+    }
+    ol {
+      display:none;
+    }
+  }
+}
 .report-group-body {
 
   .report-group-heading {
