adding social to all the charts and linking them to the respective parts of the pages. adding open graph meta tags to pull descriptions

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -5,6 +5,16 @@
 .panel-title {
   line-height: 1.5;
 }
+.panel-footer.social {
+  overflow: auto;
+  padding: 15px 0 0 15px;
+  
+  .social-section {
+    float: right;
+    background-color: #F5F5F5;
+    padding: 10px 10px 10px;
+  }
+}
 .header {
   p {
     font-size: 1.2em;
