--- a/_includes/chart-module.html
+++ b/_includes/chart-module.html
@@ -32,9 +32,17 @@
             });
         </script>
     </div>
-    <div class="panel-footer">
+    <div class="panel-footer social">
       {% if chart.description %}<p class="report-chart-description">{{ chart.description }}</p>{% endif %}
       {% if chart.note %}<p class="report-chart-note">{{ chart.note}}</p>{% endif %}
+      <div class="social-section">
+        <span class='st_sharethis' st_url="http://foratlanta.github.io/{{page.url}}#{{ chart.datasource }}"></span>
+        <span class='st_facebook' st_url="http://foratlanta.github.io/{{page.url}}#{{ chart.datasource }}"></span>
+        <span class='st_twitter' st_url="http://foratlanta.github.io/{{page.url}}#{{ chart.datasource }}"></span>
+        <span class='st_linkedin' st_url="http://foratlanta.github.io/{{page.url}}#{{ chart.datasource }}"></span>
+        <span class='st_googleplus' st_url="http://foratlanta.github.io/{{page.url}}#{{ chart.datasource }}"></span>
+        <span class='st_buffer' st_url="http://foratlanta.github.io/{{page.url}}#{{ chart.datasource }}"></span>
+      </div>
     </div>
   </div>
 </div>
