adding future ability to include other state data

--- a/_includes/chart-module.html
+++ b/_includes/chart-module.html
@@ -15,6 +15,7 @@
                     'type':'{{ chart.series1-type }}',
                     'format':'{{ chart.series1-format}}',
                     'label':'{{ chart.series1-label}}',
+                    'useCsvMetricForXaxisLabel': '{{ chart.series1-useCsvMetricForXaxisLabel}}',
                     'max':'{{ chart.series1-max }}',
                     'min': '{{ chart.series1-min }}',
                     'targetLabel': '{{ chart.targetLabel }}',
@@ -25,6 +26,7 @@
                     'type':'{{ chart.series2-type }}',
                     'format':'{{ chart.series2-format}}',
                     'label':'{{ chart.series2-label}}',
+                    'useCsvMetricForXaxisLabel': '{{ chart.series2-useCsvMetricForXaxisLabel}}',
                     'max': '{{ chart.series2-max }}',
                     'min': '{{ chart.series2-min }}',
                     {% endif %}
