changing scripts to ssl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
   <meta property="og:site_name" content="FORAtlanta" />
 
   <link rel="stylesheet" href="/css/styles.css">
-  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
   <script type="text/javascript">
     var chartOptions=[];
@@ -32,7 +32,7 @@
     ga('send', 'pageview');
   </script>
   <script type="text/javascript">var switchTo5x=true;</script>
-  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
   <script type="text/javascript">stLight.options({publisher: "a6d2f838-eb3b-4415-92c1-d72a2bf2a53f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </head>
 
