fix for relative url on sharethis

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     ga('send', 'pageview');
   </script>
   <script type="text/javascript">var switchTo5x=true;</script>
-  <script type="text/javascript" src="//sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript" src="//ws.sharethis.com/button/buttons.js"></script>
   <script type="text/javascript">stLight.options({publisher: "a6d2f838-eb3b-4415-92c1-d72a2bf2a53f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 </head>
 
