adding intro to footer on all pages except for home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,9 @@
     <section class="main-content-wrapper">
       <section id="main-content">
         {{ content }}
+        {% if page.url != '/index.html' %}
+        {% include intro-footer.html %}
+        {% endif %}
       </section>
     </section>
   </section>
