navbar menu name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,12 +49,7 @@
                   <a href="/" class="logo"><span>FOR</span>Atlanta</a>
                 </div>
                 <!-- Toggle get grouped for better mobile display -->
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">Menu</button>
 							</div>
 						</div>
             <div class="col-sm-9">
