--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
 </head>
 
 <body>
-  <div class="page-wrapper">
-    <header id="header" class="header fixed clearfix">
+  <div class="page-wrapper fixed-header-on">
+    <header id="header" class="header fixed object-visible clearfix">
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-3">
