--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -145,7 +145,9 @@
       }
     }
   }
-
+  .page-wrapper .main-container {
+  	padding: 100px 0;
+  }
 .dropdown.settings .dropdown-menu>li>a:hover,
 .dropdown.settings .dropdown-menu>li>a:active{
  background-color: #16a086;
