--- a/_includes/chart-module.html
+++ b/_includes/chart-module.html
@@ -1,4 +1,5 @@
-<div id="{{ chart.datasource }}" class="report-chart {{ chart.size }}">
+<a class="anchor" id="{{ chart.datasource }}"></a>
+<div class="report-chart {{ chart.size }}">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h5 class="panel-title">{{ chart.title }}</h5>
