adding necessary functionality to choose which series youd like to place your dashed line against

--- a/_includes/chart-module.html
+++ b/_includes/chart-module.html
@@ -20,7 +20,8 @@
                     'max':'{{ chart.series1-max }}',
                     'min': '{{ chart.series1-min }}',
                     'targetLabel': '{{ chart.targetLabel }}',
-                    'targetBenchmark': '{{ chart.targetBenchmark }}'
+                    'targetBenchmark': '{{ chart.targetBenchmark }}',
+                    'targetSeries': '{{ chart.targetSeries }}'
                 },{
                     {% if chart.series2-metric %}
                     'metric':'{{ chart.series2-metric }}',
