Removed pull class from menu element

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,7 +147,7 @@
                                   {% endfor %}
                                 </ul>
                               </li>
-                              <li class="dropdown pull-left">
+                              <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="/charts/code-enforcement.html">Office of Code Enforcement</a>
                                 <ul class="dropdown-menu dropdown-submenu">
                                   {% for info in site.data.code-enforcement %}
